[tool.poetry]
name = "manga109"
version = "0.0.0"
description = "Type-based API client for Manga109"
authors = ["Shunta Komatsu <shuntak217@gmail.com>"]
license = "MIT"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = "^3.9"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
isort = "^5.8.0"
pytest = "^6.2.3"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
